# QML_Data-Acquisition-Interface

./: README.md
dataAcquisition/: CMakeLists.txt  CMakeLists.txt.user.d682d2e  Coincide.qml  Config.qml  D1.qml  EnergySpectrum.qml  Flood.qml  Home.qml  HomePage1.qml  HomePage2.qml  HomePage3.qml  MyButton.qml  OriginalData.qml  SelfCollect.qml  SetTable.qml  Singles.qml  fileio.cpp  fileio.h  main.cpp  main.qml  res.qrc  settings.ini
dataAcquisition/dg/: Debug1.qml  Debug2.qml
